@@ -1,4 +1,7 @@
 development -> 1.7
+ - Implemented translation back and from Solexa quality score encoding in fasta-to-compact
+   and compact-to-fasta. Thanks to Cock PJA et al NAR 2010 for the clear description of the 
+   Solexa base quality scores.
  - The sort mode now supports reading only a slice of an input alignment (see options
    --start-position and --end-position).
  - Refactored CompactAlignmentToAnnotationCountsMode to use IterateAlignments (provides
